# pipecat-flows

./: .gitignore  Dockerfile  README.md  USAGE_SUMMARY.txt  _EXTRA_lead_qualify.py  bot.py  db.py  env.example  flow.py  manager.py  plan.md  pyproject.toml  services.py  session.py  sip_gateway.py  sip_integration.md  sts_bot.py
agents/22bcd13a/: flow.py
agents/c703612b/: flow.py
scripts/: ws_test_client.py
transports/: __init__.py  mod_audio_stream_serializer.py
