[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai-flows>=0.0.21",
    "pipecat-ai[anthropic,assemblyai,aws-nova-sonic,azure,cartesia,daily,deepgram,elevenlabs,gladia,google,groq,heygen,inworld,local-smart-turn-v3,openai,runner,silero,webrtc,xai]>=0.0.86",
    "pipecatcloud>=0.2.4",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
